--- a/large_scale_data/BMI535_Week_1.1.1_Intro.html
+++ b/large_scale_data/BMI535_Week_1.1.1_Intro.html
@@ -51,10 +51,10 @@ Please don't be disruptive to class learning or disparaging to other students.
 1. **Create**, **Normalize**, **Load** and **Query** Relational Databases
 1. **Understand** the types of NoSQL Databases and their uses
 1. **Create** and **Run** jobs on High Performance Computing systems (e.g. Exacloud)
-1. **Understand** and **utilize** the map-reduce programming pattern
+1. **Understand** and **Utilize** the map-reduce programming pattern
 1. **Reproduce**, **Implement**, **Debug**, and **Document** an established biomedical data workflow
-1. **Utilize** container-based workflows on a remote system
-1. (BMI 635 only) **Design** and **Evaluate** the efficiency of parallelized analysis workflows
+1. **Understand** container-based workflows on a remote system, and other tools for reproducible science
+1. **Understand** the efficiency of parallelized analysis workflows
 
 ---
 
@@ -65,7 +65,8 @@ Please don't be disruptive to class learning or disparaging to other students.
 - High Performance Computing (HPC)
   - Exacloud
 - Workflows
-  - GATK/Docker
+  - GATK
+  - Tools for Reproducibility
 - Databases
   - Relational Databases
   - NoSQL Databases
@@ -85,7 +86,6 @@ Please don't be disruptive to class learning or disparaging to other students.
 Please contact us if you need to make an appointment
 
 - mooneymi@ohsu.edu
-- klockec@ohsu.edu
 
 ---
 
@@ -214,7 +214,6 @@ class: center, middle
 - Relational Databases
 - NoSQL (Not only SQL) Databases
   - Document stores
-  - Column stores
   - Graph Databases
 
 [Modern Data Formats for Big Bioinformatics Data
