--- a/large_scale_data/BMI535_Week_1.1.1_Intro.html
+++ b/large_scale_data/BMI535_Week_1.1.1_Intro.html
@@ -3,8 +3,8 @@
   <head>
     <title>Intro to Big Data and Command Line Review</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Ted Laderas" />
-    <meta name="date" content="2022-12-31" />
+    <meta name="author" content="Ted Laderas and Michael Mooney" />
+    <meta name="date" content="2023-1-10" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link rel="stylesheet" href="libs/xaringan-themer.css" type="text/css" />
   </head>
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 ## BMI 535/635
 ### Michael Mooney
 ### (based on slides from Ted Laderas)
-### 2022-01-04
+### Week 1
 
 ---
 
