--- a/large_scale_data/BMI535_Week_1.1.1_Intro.html
+++ b/large_scale_data/BMI535_Week_1.1.1_Intro.html
@@ -259,13 +259,14 @@ If I'm in `/home/its/ug1`, how can I refer to `report.doc` from this folder?
 Be familiar with the following commands: 
 
 - `ls` - listing files within a directory
+- `cp` - copy files
 - `mv` - move/rename a file
 - `rm` - removing files 
 - `rm -r` - removing files within a directory (recursive)
 - `grep` - look for a pattern/regular expression in a file
 - `chmod` - file permissions
 - `pwd` - current directory
-- `head/cat/tail` - look at the contents of a file
+- `head/tail/cat/less` - look at the contents of a file
 
 ---
 # Learn a Command Line text editor (vi/nano, Chapter 22)
