--- a/large_scale_data/index.html
+++ b/large_scale_data/index.html
@@ -36,7 +36,9 @@
 <li><strong>Week 5 - Introduction to SQL</strong><ul>
 <li>Week 5.1.1 <a href="https://github.com/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.1_Install_Postgres.md">Installing Postgres</a></li>
 <li>Week 5.1.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Load_Database.ipynb">Creating a Database</a></li>
-<li>Week 5.1.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.2_Intro_to_SQL.ipynb">Introduction to Postgres SQL</a></li>
+<li>Week 5.1.3 <a 
+href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.1.3_Intro_to_SQL.ipynb">Introduction 
+to Postgres SQL</a></li>
 <li>Week 5.2 <a href="https://nbviewer.org/github/mooneymi/large_scale_data/blob/master/BMI535_Week_5.2_Database_Design.ipynb">Database Design</a></li>
 </ul>
 </li>
